--- a/pages/page5.html
+++ b/pages/page5.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Night stalker</h1>
-    <p>
-      Tu as un stalker. Trouve un moyen de te sauver avant qu’il soit trop tard.
-    </p>
-    <a href="pages/page1.html" class="bouton">Start</a>
+    <h2>
+      Tu arrives finalement chez toi et tu ferme la porte à clef derrière toi.
+      La journée a été longue, il est l’heure d’aller dormir.
+    </h2>
   </body>
 </html>
