--- a/pages/page11.html
+++ b/pages/page11.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="styles2.css" />
   </head>
   <body>
-    <h2>
-      Tu arrives finalement chez toi et tu ferme la porte à clef derrière toi.
-      La journée a été longue, il est l’heure d’aller dormir.
-    </h2>
-    <a href="page6.html" class="bouton">Continuer</a>
+    <h2>Le stalker sort un poignard.</h2>
+    <a href="page14.html" class="bouton"
+      >Tu restes calme et décide de ne pas bouger.</a
+    >
+    <a href="page12.html" class="bouton"
+      >Tu cours vers la pièce la plus proche.</a
+    >
   </body>
 </html>
