--- a/pages/page13.html
+++ b/pages/page13.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <h2>
-      Alors que ton pas s’accélère, tu trébuches, te cogne la tête sur le sol et
-      perds connaissance.
+      En te déplaçant tu fais également craqué le sol. L’homme l’entend et te
+      fonce dessus. Tu essaies de courir mais c’est trop tard, il est plus
+      rapide que toi. Il t’attrape avant de t’assommer avec un coup derrière la
+      tête.
     </h2>
     <a href="pagego.html" class="bouton">Game Over</a>
   </body>
