--- a/pages/page14.html
+++ b/pages/page14.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <h2>
-      Tu arrives finalement chez toi et tu ferme la porte à clef derrière toi.
-      La journée a été longue, il est l’heure d’aller dormir.
+      L’homme te fonce dessus d’une vitesse presque surhumaine et te poignard la
+      jambe droite alors que tu essaies de l’éviter.
     </h2>
-    <a href="page6.html" class="bouton">Continuer</a>
+    <a href="page17.html" class="bouton">Continuer</a>
   </body>
 </html>
