--- a/pages/page17.html
+++ b/pages/page17.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <h2>
-      Tu arrives finalement chez toi et tu ferme la porte à clef derrière toi.
-      La journée a été longue, il est l’heure d’aller dormir.
+      Tu es allongé sur le sol quand il sort un tissu couvert de chloroforme.
+      Quelques secondes plus tard, tu perds conscience.
     </h2>
-    <a href="page6.html" class="bouton">Continuer</a>
+    <a href="pagego.html" class="bouton">Game Over</a>
   </body>
 </html>
