--- a/pages/page18.html
+++ b/pages/page18.html
@@ -8,9 +8,10 @@
   </head>
   <body>
     <h2>
-      Tu arrives finalement chez toi et tu ferme la porte à clef derrière toi.
-      La journée a été longue, il est l’heure d’aller dormir.
+      Alors que la police raccroche enfin, le téléphone afficha un écrans noir.
+      La batterie est vide. Ton stalker enfonça une dernière fois la porte et la
+      cassa.
     </h2>
-    <a href="page6.html" class="bouton">Continuer</a>
+    <a href="page20.html" class="bouton">continuer</a>
   </body>
 </html>
