--- a/pages/page7.html
+++ b/pages/page7.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <h2>
-      Tu arrives finalement chez toi et tu ferme la porte à clef derrière toi.
-      La journée a été longue, il est l’heure d’aller dormir.
+      Tu te réveilles en sursaut quelques minutes plus tard en sentant quelqu’un
+      t’étouffé avec un tissus couvert de chloroforme.
     </h2>
-    <a href="page6.html" class="bouton">Continuer</a>
+    <a href="pagego.html" class="bouton">Game Over</a>
   </body>
 </html>
