--- a/pages/page8.html
+++ b/pages/page8.html
@@ -8,9 +8,10 @@
   </head>
   <body>
     <h2>
-      Tu arrives finalement chez toi et tu ferme la porte à clef derrière toi.
-      La journée a été longue, il est l’heure d’aller dormir.
+      Tu te déplace lentement et silencieusement vers la pièce à vivre. La pièce
+      est plongé dans le noir.
     </h2>
-    <a href="page6.html" class="bouton">Continuer</a>
+    <a href="page9.html" class="bouton">Tu allume la lumière.</a>
+    <a href="page10.html" class="bouton">Tu laisse la lumière éteinte.</a>
   </body>
 </html>
