--- a/pages/pagego.html
+++ b/pages/pagego.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="styles2.css" />
   </head>
   <body>
-    <h2>
-      Tu arrives finalement chez toi et tu ferme la porte à clef derrière toi.
-      La journée a été longue, il est l’heure d’aller dormir.
-    </h2>
-    <a href="page6.html" class="bouton">Continuer</a>
+    <h1>Game Over</h1>
+    <a href="menu.html" class="bouton">Recommencer</a>
   </body>
 </html>
