--- a/pages/page16.html
+++ b/pages/page16.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Le livre dont vous êtes le héros</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles2.css" />
   </head>
   <body>
-    <h1>Night stalker</h1>
-    <p>
-      Tu as un stalker. Trouve un moyen de te sauver avant qu’il soit trop tard.
-    </p>
-    <a href="pages/page1.html" class="bouton">Start</a>
+    <h2>
+      Tu regardes autour de toi et vois ta fenêtre de salle de bain en imposte.
+    </h2>
+    <a href="page19.html" class="bouton">Continuer</a>
   </body>
 </html>
