--- a/pages/page20.html
+++ b/pages/page20.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <h2>
-      Tu arrives finalement chez toi et tu ferme la porte à clef derrière toi.
-      La journée a été longue, il est l’heure d’aller dormir.
+      Il se jeta sur toi et te plaqua au sol avant de te faire perdre
+      connaissance en frappant à l’arrière de la tête.
     </h2>
-    <a href="page6.html" class="bouton">Continuer</a>
+    <a href="pagego.html" class="bouton">Game Over</a>
   </body>
 </html>
