--- a/pages/page9.html
+++ b/pages/page9.html
@@ -8,9 +8,12 @@
   </head>
   <body>
     <h2>
-      Tu arrives finalement chez toi et tu ferme la porte à clef derrière toi.
-      La journée a été longue, il est l’heure d’aller dormir.
+      Une grande silhouette noire se tient au milieu de la pièce et se retourne
+      vers toi.
     </h2>
-    <a href="page6.html" class="bouton">Continuer</a>
+    <a href="page11.html" class="bouton">Tu reste et te défends.</a>
+    <a href="page12.html" class="bouton"
+      >Tu cours vers la pièce avec une clef la plus proche.</a
+    >
   </body>
 </html>
