--- a/menu.html
+++ b/menu.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="styles1.css" />
   </head>
   <body>
+    <p>
     <h1>Night stalker</h1>
     <h2>
       Tu as un stalker. Trouve un moyen de te sauver avant qu’il soit trop tard.
     </h2>
     <a href="pages/page1.html" class="bouton">Start</a>
+    </p>
+    <img src="/menu.png" alt="Stalker">
   </body>
 </html>
