--- a/pages/page21.html
+++ b/pages/page21.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="styles2.css" />
   </head>
   <body>
-    <p>
-    <h1>Game Over</h1>
-    <a href="/menu.html" class="bouton">Recommencer</a>
-    </p>
-      <img src="/eyes.png" alt="Game Over" />
+    <h2>
+      L’homme sort de la maison en courant, s’arrête pour regarder autour de
+      lui. Puis il part dans le quartier à ta recherche.
+    </h2>
+    <a href="page23.html" class="bouton">continuer</a>
   </body>
 </html>
