--- a/pages/pagevictory.html
+++ b/pages/pagevictory.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <p>
-    <h1>Game Over</h1>
-    <a href="/menu.html" class="bouton">Recommencer</a>
+      <h1>Victory</h1>
+      <a href="/menu.html" class="bouton">Recommencer</a>
     </p>
-      <img src="/eyes.png" alt="Game Over" />
+    <img src="/victory.png" alt="Victory">
   </body>
 </html>
